<?xml version="1.0" encoding="utf-8"?>

    <!-- strings.xml
    Provides a list of string resources to be used in the application.
    Created by: Will Smith
    Created on: 2/23/19
    Last Modified by: Will Smith
    Last Modified on: 3/1/19
    Assignment/Project: A290 Android - Final Project
    Part of: Gymfolio -->

<resources>
    <string name="app_name">Gymfolio</string>
    <string name="begin_workout">Begin Workout</string>
    <string name="customize_workout">Customize Workout</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="customize_intro">Choose one day to customize</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="example_workout">3x15 Bench 145</string>
    <string name="add_button">Add</string>
    <string name="today">Today</string>
    <string name="remove_button">Remove</string>
</resources>
